набросал разметку и добавил переменные для цветов

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,4 +4,8 @@
 @import "common/_typography";
 
 // blocks
+@import "blocks/_header.scss";
 @import "blocks/_promo";
+@import "blocks/portfolio";
+@import "blocks/_order.scss";
+@import "blocks/_footer.scss";
