--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,4 +1,4 @@
-$h1-fz-mobile: 20px;
-$h1-fz-tablet: 32px;
-$h1-fz-desktop: 48px;
-$h1-fw: 400;
+// colors
+$color-dark:#333333;
+$color-light:#FF2D2D;
+$color-text-light: #FFF;
