--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,8 +1,27 @@
 .header {
-  padding: 18px 0;
+  padding: 17px 0;
   background-color: $color-dark;
+  color: $color-text-light;
+}
+
+.header-inner {
+  @include container;
+}
+
+.header-wrap {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
-color: $color-text-light;
+  margin-right: auto;
+  font-weight: 600;
+  font-size: 42px;
+  line-height: 57px;
+  color: inherit;
+  text-decoration: none;
 }
+
+
+
+
