--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,11 +1,14 @@
 // common files
 @import "common/_variables";
 @import "common/_fonts";
+@import "common/_mixins";
+@import "common/_common";
 @import "common/_typography";
 
 // blocks
 @import "blocks/_header.scss";
+@import "blocks/_main-nav";
 @import "blocks/_promo";
-@import "blocks/portfolio";
+@import "blocks/_portfolio";
 @import "blocks/_order.scss";
 @import "blocks/_footer.scss";
