--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -3,3 +3,13 @@
   margin: 0 auto;
   border: 1px solid red;
 }
+
+@mixin section-title {
+  margin: 0;
+  font-family: $font-open;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 87px;
+  text-align: center;
+  color: $color-dark;
+}
