--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,8 +7,10 @@
 
 // blocks
 @import "blocks/_header.scss";
+@import "blocks/_logo";
 @import "blocks/_main-nav";
 @import "blocks/_promo";
+@import "blocks/_btn.scss";
 @import "blocks/_portfolio";
 @import "blocks/_order.scss";
 @import "blocks/_footer.scss";
