--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -19,6 +19,10 @@
   line-height: 38px;
   text-decoration: none;
   color: inherit;
+
+  @media (max-width: $max-tablet) {
+    margin-right: 35px;
+  }
 }
 
 .social {
