--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -17,15 +17,14 @@
   align-items: center;
 }
 
-.logo {
-  margin-right: auto;
-  font-weight: 600;
-  font-size: 42px;
-  line-height: 57px;
-  color: inherit;
-  text-decoration: none;
-}
 
+.burger {
+  display: none;
+
+  @media (max-width: $max-mobile) {
+    display: block;
+  }
+}
 
 
 
