--- a/src/styles/blocks/_portfolio.scss
+++ b/src/styles/blocks/_portfolio.scss
@@ -16,9 +16,19 @@
   justify-content: space-between;
   margin-top: 100px;
   margin-bottom: 120px;
+
+  @media (max-width: $max-tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 80px 0;
+
+  }
+
+
 }
 
 .portfolio-figure {
+  flex-basis: 50%;
   position: relative;
   margin: 0;
 }
