--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -8,4 +8,10 @@
   background-color: $color-light;
   border-radius: 6px;
   text-decoration: none;
+
+  @media (max-width: $max-mobile) {
+    padding: 20px 14px;
+    font-size: 24px;
+    line-height: 33px;
+  }
 }
