--- a/src/styles/blocks/_main-nav.scss
+++ b/src/styles/blocks/_main-nav.scss
@@ -1,20 +1,51 @@
 .main-nav {
+
+  @media (max-width: $max-mobile) {
+    position: absolute;
+    display: none;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 15px 0 25px;
+    background-color: $color-dark;
+  }
+
+
   ul {
     display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
+
+    @media (max-width: $max-mobile) {
+      display: initial;
+      text-align: center;
+    }
   }
 
   li {
     padding: 33px 25px;
     margin-left: 10px;
 
+    @media (max-width: $max-mobile) {
+      padding: 8px 25px;
+      margin-top: 10px;
+      margin-left: 0;
+    }
+
     &:first-child {
       margin-left: 0;
       background-color: $color-light;
 
+      @media (max-width: $max-mobile) {
+        background-color: $color-dark;
+      }
+
+
+
     }
+
+
   }
 
   a {
