--- a/src/styles/blocks/_portfolio.scss
+++ b/src/styles/blocks/_portfolio.scss
@@ -1,6 +1,15 @@
 .portfolio {
   padding: 130px 0;
   text-align: center;
+
+  @media (max-width: $max-tablet) {
+    padding: 120px 0;
+  }
+
+  @media (max-width: $max-mobile) {
+    padding: 90px 0;
+  }
+
 }
 
 .portfolio-inner {
@@ -24,6 +33,12 @@
 
   }
 
+  @media (max-width: $max-mobile) {
+    display: block;
+    margin: 60px 0;
+
+  }
+
 
 }
 
@@ -31,6 +46,14 @@
   flex-basis: 50%;
   position: relative;
   margin: 0;
+
+
+
+  @media (max-width: $max-mobile) {
+    margin-top: 20px;
+
+  }
+
 }
 
 .portfolio-desc {
@@ -43,4 +66,15 @@
   line-height: 33px;
   background-color: rgba($color-dark, .4);
   color: $color-text-light;
+
+  @media (max-width: $max-tablet) {
+    padding: 20px 0;
+  }
+
+  @media (max-width: $max-mobile) {
+    padding: 20px 0;
+  }
+
+
 }
+
