--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -15,6 +15,11 @@ text-align: center;
     padding-top: 220px;
     padding-bottom: 190px;
   }
+
+  @media (max-width: $max-mobile) {
+    padding-top: 145px;
+    padding-bottom: 100px;
+  }
 }
 
 .promo-inner {
@@ -36,6 +41,7 @@ text-align: center;
   @media (max-width: $max-mobile) {
     font-size: 32px;
     line-height: 44px;
+    margin-bottom: 80px;
   }
 
 }
