Блок с формой.начало

--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -15,3 +15,13 @@
     line-height: 33px;
   }
 }
+
+.btn-form {
+  position: absolute;
+  bottom: 0;
+  font-family: $font-open;
+  width: 100%;
+  font-size: 28px;
+  line-height: 34px;
+  bottom: none;
+}
