--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,4 +13,5 @@
 @import "blocks/_btn.scss";
 @import "blocks/_portfolio";
 @import "blocks/_order.scss";
+@import "blocks/_form";
 @import "blocks/_footer.scss";
