--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -23,5 +23,13 @@
   width: 100%;
   font-size: 28px;
   line-height: 34px;
-  bottom: none;
+  border: none;
+
+  @media (max-width: $max-tablet) {
+    position: relative;
+    margin-top: 40px;
+    top: 0;
+  }
 }
+
+
