--- a/src/styles/blocks/_order.scss
+++ b/src/styles/blocks/_order.scss
@@ -16,4 +16,10 @@
   line-height: 38px;
   text-align: center;
   color: $color-dark;
+
+  @media (max-width: $max-mobile) {
+    font-size: 18px;
+    line-height: 25px;
+  }
+
 }
