--- a/src/styles/blocks/_portfolio.scss
+++ b/src/styles/blocks/_portfolio.scss
@@ -45,12 +45,23 @@
 .portfolio-figure {
   flex-basis: 50%;
   position: relative;
-  margin: 0;
+  margin: 0 10px;
 
+  @media (max-width: $max-tablet) {
+    flex-basis: 50%;
+    margin: 10px;
+    margin-left: -10px;
+    margin-right: -10px;
+
+  }
 
 
   @media (max-width: $max-mobile) {
-    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 20px
+
+
 
   }
 
