сделал страницу контактов,доделал мобильное меню

--- a/src/styles/blocks/_main-nav.scss
+++ b/src/styles/blocks/_main-nav.scss
@@ -1,5 +1,15 @@
 .main-nav {
 
+  @media (min-width: $desktop) {
+    display: block !important;
+  }
+
+  @media (min-width: $tablet) {
+    display: block !important;
+  }
+
+
+
   @media (max-width: $max-mobile) {
     position: absolute;
     display: none;
