--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -3,6 +3,12 @@
   flex-wrap: wrap;
   width: 100%;
   margin-top: 90px;
+
+  @media (min-width: $desktop) {
+    margin-left: -9px;
+  }
+
+
 }
 
 .form-field {
