--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,5 +13,7 @@
 @import "blocks/_btn.scss";
 @import "blocks/_portfolio";
 @import "blocks/_order.scss";
+@import "blocks/_contacts.scss";
+@import "blocks/_tabs";
 @import "blocks/_form";
 @import "blocks/_footer.scss";
