сделал аккардеон,добавил иконки +/-(без JS)

--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -8,6 +8,7 @@
   background-color: $color-light;
   border-radius: 6px;
   text-decoration: none;
+  cursor: pointer;
 
   @media (max-width: $max-mobile) {
     padding: 20px 14px;
