--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,3 +17,5 @@
 @import "blocks/_tabs";
 @import "blocks/_form";
 @import "blocks/_footer.scss";
+@import "blocks/_faq";
+@import "blocks/_accordeon";
