--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,6 +16,7 @@
 @import "blocks/_promo";
 @import "blocks/_btn.scss";
 @import "blocks/_portfolio";
+@import "blocks/_catalog";
 @import "blocks/_filter";
 @import "blocks/_order.scss";
 @import "blocks/_contacts.scss";
