--- a/src/styles/blocks/_filter.scss
+++ b/src/styles/blocks/_filter.scss
@@ -4,6 +4,21 @@
   padding: 0;
   margin-top: 80px;
   list-style: none;
+
+  @media (max-width: $max-tablet) {
+    width: 100%;
+    margin-top: 70px;
+  }
+
+  @media (max-width: $max-mobile) {
+    display: block;
+    margin-top: 50px;
+    text-align: center;
+
+  }
+
+
+
 }
 
 .filter-item {
@@ -12,6 +27,17 @@
   &:first-child {
     margin-left: 0;
   }
+
+  @media (max-width: $max-mobile) {
+    padding: 10px;
+    margin-left: 0;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: 1px solid #000;
+    border-radius: 6px;
+    background-color: $color-dark
+  }
+
 }
 
 .filter-link {
@@ -26,7 +52,13 @@
   &.active {
     color: $color-light;
   }
+
+  @media (max-width: $max-mobile) {
+    color: #fff;
+  }
 }
+
+
 
 .catalog-list {
   display: flex;
@@ -44,5 +76,15 @@
   flex-basis: 25%;
   margin-top: 10px;
   margin-bottom: 10px;
+
+  @media (max-width: $max-tablet) {
+    flex-basis: 50%;
+  }
+
+  @media (max-width: $max-mobile) {
+    flex-basis: 100%;
+  }
+
+
 
 }
