--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -20,10 +20,15 @@
 
 .burger {
   display: none;
+  font-size: 0px;
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: $color-dark;
 
   @media (max-width: $max-mobile) {
     display: block;
-    margin: 20px 0 20px auto;
+    margin: 20px 16px 20px auto;
   }
 }
 
