--- a/src/styles/blocks/_accordeon.scss
+++ b/src/styles/blocks/_accordeon.scss
@@ -18,6 +18,18 @@
   background-color: #fff;
   border: none;
   cursor: pointer;
+
+  @media (max-width: $max-tablet) {
+    font-size: 32px;
+    line-height: 44px;
+
+  }
+
+  @media (max-width: $max-mobile) {
+    font-size: 20px;
+    line-height: 27px;
+
+  }
 }
 
 .accordeon-answear {
@@ -28,6 +40,23 @@
   padding-top: 25px;
   padding-bottom: 25px;
   padding-left: 25px;
+
+  @media (max-width: $max-tablet) {
+    font-size: 16px;
+    line-height: 22px;
+
+  }
+
+  @media (max-width: $max-mobile) {
+    font-size: 14px;
+    line-height: 19px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+
+  }
+
+
 }
 
 .accordeon-icon {
@@ -36,6 +65,7 @@
   height: 40px;
   left: 1206.11px;
   top: 31px;
+
 }
 
 .accordeon-icon-minus {
