--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -2,6 +2,16 @@
   padding-top: 230px;
   padding-bottom: 130px;
 
+  @media (max-width: $max-tablet) {
+    padding-top: 220px;
+    padding-bottom: 120px;
+  }
+
+  @media (max-width: $max-mobile) {
+    padding-top: 200px;
+    padding-bottom: 90px;
+  }
+
 }
 
 .contacts-inner {
@@ -14,6 +24,11 @@
 
 .contacts-wrap {
   display: flex;
+
+  @media (max-width: $max-mobile) {
+    display: block;
+  }
+
 }
 
 .contacts-content {
@@ -34,6 +49,13 @@
     list-style: none;
     margin-bottom: 20px;
   }
+
+  @media (max-width: $max-tablet) {
+    font-size: 18px;
+    line-height: 25px;
+
+  }
+
 }
 
 .contacts-visual {
