--- a/src/styles/blocks/_filter.scss
+++ b/src/styles/blocks/_filter.scss
@@ -26,11 +26,18 @@
 
   &:first-child {
     margin-left: 0;
+
+    @media (max-width: $max-mobile) {
+      margin-left: 25px;
+    }
+
+
   }
 
   @media (max-width: $max-mobile) {
     padding: 10px;
-    margin-left: 0;
+    margin-left: 25px;
+    margin-right: 25px;
     margin-top: 5px;
     margin-bottom: 5px;
     border: 1px solid #000;
