--- a/src/styles/blocks/_tabs.scss
+++ b/src/styles/blocks/_tabs.scss
@@ -5,10 +5,34 @@
   margin-bottom: 40px;
   padding: 0;
   list-style: none;
+
+  @media (max-width: $max-tablet) {
+    margin-top: 70px;
+  }
+
+  @media (max-width: $max-mobile) {
+    display: block;
+    text-align: center;
+    margin-bottom: 10px;
+
+
+  }
 }
 
 .tabs-item {
   margin: 0 25px;
+
+  @media (max-width: $max-mobile) {
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: 1px solid #000;
+    border-radius: 6px;
+    color: #fff;
+    background-color: $color-dark;
+
+
+  }
 }
 
 .tabs-link {
@@ -22,4 +46,10 @@
   &.active {
     color: red;
   }
+
+  @media (max-width: $max-mobile) {
+    color: #fff;
+  }
+
+
 }
